--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
-version: '2'
 services:
   postgres:
     image: 'postgres:latest'
     restart: always
-    volumes:
-      - './postgres_data:/var/lib/postgresql/data'
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=bitscape
     ports:
       - '5432:5432'
   adminer:
