--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,15 @@
 # Test environment configuration
-NODE_ENV=test
-
+# Development environment configuration
+NODE_ENV=development
+DB_TYPE=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres123
 DB_DATABASE=test
+
+# For SSL (set to false for local development)
+TYPEORM_SSL=false
+
+# Docker Compose Password (should match the one above)
+POSTGRES_PASSWORD=postgres123
