--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,6 @@
 # Test environment configuration
 # Development environment configuration
-NODE_ENV=development
+NODE_ENV=test
 DB_TYPE=postgres
 DB_HOST=localhost
 DB_PORT=5432
