--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,8 +48,13 @@ jobs:
           --health-retries 5
 
     env:
-      DATABASE_URL: postgres://postgres:postgres123@localhost:5432/test
       NODE_ENV: test
+      DB_TYPE: postgres
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DB_USERNAME: postgres
+      DB_PASSWORD: postgres123
+      DB_DATABASE: test
       TYPEORM_SSL: false
 
     defaults:
