--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,10 +73,13 @@ jobs:
 
       - name: Wait for DB
         run: |
-          until pg_isready -h localhost -U test; do
+          # Wait until Postgres is ready (use the configured POSTGRES_USER)
+          until pg_isready -h localhost -U postgres; do
             echo "Waiting for database..."
             sleep 2
           done
+          # Small extra delay to allow DB to finish init tasks
+          sleep 1
 
       - name: Run e2e tests
         run: npm run test:e2e
