--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,3 +83,8 @@ jobs:
 
       - name: Run e2e tests
         run: npm run test:e2e
+      
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
