--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+  "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+  "test:cov": "jest --coverage",
+  "test:ci": "jest --coverage --runInBand",
+  "test:e2e:ci": "jest --config ./test/jest-e2e.json --coverage --runInBand",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
