--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Run unit tests (CI)
         run: npm run test:ci
 
+      - name: Run Codecov Tests
+        run: npm run test:cov
+
   e2e:
     name: Run e2e tests
     runs-on: ubuntu-latest
