--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,10 @@ jobs:
       - name: Run unit tests (CI)
         run: npm run test:ci
 
-      - name: Run Codecov Tests
-        run: npm run test:cov
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   e2e:
     name: Run e2e tests
