Add working docker-compose integrated with the database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,30 @@
 services:
+  api:
+    image: nicovice/bitscape-api:latest
+    ports:
+      - '3000:3000'
+    environment:
+      DB_TYPE: postgres
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USERNAME: postgres
+      DB_PASSWORD: postgres
+      DB_DATABASE: bitscape
+      TYPEORM_SSL: false
+      TYPEORM_SYNCHRONIZE: 'true'
+    depends_on:
+      - postgres
+
   postgres:
     image: 'postgres:latest'
     restart: always
     environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=bitscape
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: bitscape
     ports:
       - '5432:5432'
+
   adminer:
     image: 'adminer:latest'
     ports:
